[not verified] Fix up editor styles while block is aligned
These tweaks just ensure the view in the editor is as it was prior to the mobile fallback being added to the frontend. Unforunately, block alignment issues are well out of scope for this PR.

--- a/extensions/blocks/opentable/view.scss
+++ b/extensions/blocks/opentable/view.scss
@@ -106,7 +106,7 @@
 			}
 		}
 		
-		&.is-style-wide {
+		.entry-content &.is-style-wide {
 			height: 301px;
 
 			&.is-multi {
